--- a/youpay/pubspec.yaml
+++ b/youpay/pubspec.yaml
@@ -30,9 +30,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^2.1.0
 
-  # firebase packge
   firebase_core: ^1.6.0
   google_sign_in: ^5.1.0
+  shared_preferences: ^2.0.7
 
 dev_dependencies:
   flutter_test:
